# gmailbot

./: backend.py  discordbot.py  discordbot_backup.py  discordcommands.py  discorddefaultvars.py  emaildiscord.py  gmail.py  loggingsetup.py  main.py  pyproject.toml  reseter.py  utils.py  webserver.py
database/: basedb.py  cache.py  db.py  tree.py
discordbot/: defaultstreams.py  defaultvars.py
discordbot/bot/: __init__.py  bot.py  command.py  file.py  stream.py
discordbot/commands/: admin.py  execs.py  gmail.py  manage.py  simple.py  todo.py  types.py
discordbot/tools/: context.py  messaging.py  ratelimit.py  regexcommands.py  requirements.py  standardcommands.py
discordbot/vars/: __init__.py  levels.py  lib.py
firebase/: basedb.py  cache.py  db.py  tree.py
gmail/bot/: __init__.py  creds.py  email.py  vars.py
old/: database_old_backup.py  discordcommands.py  discordlevels.py  utils_old_backup.py
static/: index.html  keygenform.html
utils/: crypto.py  exceptions.py  task.py  timing.py
