[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "aiohttp-web-api-template"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6"
asyncio-throttle = "^1.0"
python = "^3.8"
uvloop = "^0.14.0"
passlib = "^1.7.4"
discord = "^1.0.1"
replit = "^3.0.0"
pytz = "^2021.1"
pymessenger = "^0.0.7"
google-auth-oauthlib = "^0.4.4"
google-api-python-client = "^2.3.0"
aiogoogle = "^1.1.14"
[tool.poetry.dev-dependencies]
