[tool.poetry]
name = "repl_python3_XinyangChen"
version = "0.1.0"
description = ""
authors = ["XinyangChen <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
pytz = "^2021.1"
aiogoogle = "^1.1.14"
asyncio-throttle = "^1.0.2"
passlib = "^1.7.4"
aiohttp = "^3.7.4"
firebase-admin = "^5.0.0"
consultor = "^0.2.0"
discord = "^1.0.1"
google-api-python-client = "^2.8.0"
gmail = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
